--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
     font-size: 80px;
     color: aliceblue;
     text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .firstImg{
     max-width: 90%;
