--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@ body{
     max-width: 90%;
     margin-top: 5%;
     margin-bottom: 5%;
+    border-radius: 50px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .firstImgDiv{
     align-items: center;
