--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,14 @@ body{
     justify-content: center;
     text-align: center;
 }
+
+.buyingDiv{
+    background-color: red;
+}
+
+
+@media screen and (max-device-width: 480px){
+    .buyingDiv{
+        background-color: blue;
+    }
+}
