--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,40 @@ body{
 
 .dropdown1:hover .dropbtn {background-color: #3e8e41;}
 
+.prodMain{
+    display: flex; flex-direction: row; width: 100%; margin-top: 5%;
+}
+.prodImg{
+    width: 35%; margin: auto;
+}
+.prodDetails{
+    display: flex; flex-direction: column; width: 40%; text-align: left; margin-right: auto;
+}
+h1{
+    font-family: Kl9yFont;
+    color: white;
+    margin-top: 0;
+}
+.priceText{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: large;
+    color: white;
+}
+.buyNowBtn{
+    font-family: Kl9yFont;
+    color: white;
+    font-size: large;
+    width: 80%;
+    background-color:#ce6ee9;
+    height: 3rem;
+    margin-bottom: 15%;
+}
+.detailText{
+    color: white;
+    font-size: smaller;
+}
+
 @media (max-width: 500px){
     .buyingDiv{
         background-color: blue;
