--- a/styles.css
+++ b/styles.css
@@ -112,10 +112,10 @@ body{
 .dropdown1:hover .dropbtn {background-color: #3e8e41;}
 
 .prodMain{
-    display: flex; flex-direction: row; width: 100%; margin-top: 5%;
+    display: flex; flex-direction: row; width: 100%; margin-top: 5%; 
 }
 .prodImg{
-    width: 35%; margin: auto;
+    width: 35%; margin: auto; margin-top: 0;
 }
 .prodDetails{
     display: flex; flex-direction: column; width: 40%; text-align: left; margin-right: auto;
@@ -139,6 +139,7 @@ h1{
     background-color:#ce6ee9;
     height: 3rem;
     margin-bottom: 15%;
+    cursor: pointer;
 }
 .detailText{
     color: white;
