--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,16 @@ body{
 
 .prod{
     width: 100%;
+    
     height:auto;
     
 }
 .imgA{ 
   width: 22%;
+  text-decoration: none;
+  
+  align-items: center;
+  text-align: center;
 }
 .productLines{
     display: flex;
@@ -72,6 +77,22 @@ body{
     justify-content: space-between;
     width: 80%;
 }
+
+
+.listingName{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  font-weight: bold;
+  color: white;
+  margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+
+
 
 .buyingDiv{
     width: 90%;
@@ -153,6 +174,7 @@ h1{
 .detailText{
     color: white;
     font-size: smaller;
+    
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@@ -294,6 +316,7 @@ h1{
 .nav-container input[type="checkbox"]:checked ~ .logo{
   display: none;
 }
+
 
 
 
