--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,6 @@ body{
 .imgA{ 
   width: 22%;
   text-decoration: none;
-  
   align-items: center;
   text-align: center;
 }
@@ -81,18 +80,15 @@ body{
 
 .listingName{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: large;
+  font-size: small;
   font-weight: bold;
   color: white;
   margin: 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-top: 2rem;
 }
-
-
-
-
 
 .buyingDiv{
     width: 90%;
