--- a/styles.css
+++ b/styles.css
@@ -116,22 +116,25 @@ body{
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #ffffff00;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
 .dropdown-content a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    font-family: Kl9yFont;
+    font-size: 19px;
+    font-size: 1vw;
   }
   .dropdown1{
     position: relative; display: inline-block;
   }
   
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {background-color: #4e4e4e;}
 
 .dropdown1:hover .dropdown-content {display: block;}
 
@@ -193,6 +196,7 @@ h1{
 
 .navbar .menu-items {
   display: flex;
+  
 }
 
 .navbar .nav-container li {
@@ -201,7 +205,7 @@ h1{
 
 .navbar .nav-container a {
   text-decoration: none;
-  color: #0e2431;
+  color: #ce6ee9;
   font-weight: 500;
   font-size: 1.2rem;
   padding: 0.7rem;
@@ -277,12 +281,14 @@ h1{
   padding-left: 50px;
   transition: transform 0.5s ease-in-out;
   text-align: center;
+  font-family: Kl9yFont;
 }
 
 .navbar .menu-items li {
   margin-bottom: 1.2rem;
   font-size: 1.5rem;
   font-weight: 500;
+
 }
 
 .logo {
