9 of hearts product added

--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ body{
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #ffffff00;
+    background-color: rgb(44, 44, 44);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
