--- a/styles.css
+++ b/styles.css
@@ -71,10 +71,10 @@ body{
     align-items: center;
     text-align: center;
     margin:auto;
-    margin-top: 100px;
     align-content: center;
     justify-content: space-between;
     width: 80%;
+    margin-bottom: 3rem;
 }
 
 
@@ -383,7 +383,7 @@ h1{
       }
       .productLines{
         flex-wrap:wrap;
-
+        width: 90%;
       }
       .imgA{
         width:48%;
