--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,14 @@ h1{
     font-size: large;
     color: white;
 }
+.aboutText{
+  font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: large;
+    color: white;
+    margin-right: 20%;
+    margin-left: 20%;
+}
 .buyNowBtn{
     font-family: Kl9yFont;
     color: white;
