Test files changed

--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ h1{
     width: 80%;
     background-color:#ce6ee9;
     height: 3rem;
-    margin-bottom: 15%;
+    margin-bottom: 5%;
     cursor: pointer;
 }
 .detailText{
@@ -328,8 +328,41 @@ h1{
 .thumbnails{
   width: 20%;
 }
-
-
+.sizing-container input[type="checkbox"]:checked ~ .menu-items1{
+  display: block;
+}
+.menu-items1{
+  display: none;
+  text-decoration: none;
+}
+.sizing-container{
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.sizing-txt{
+  font-family: Kl9yFont;
+  position: absolute;
+}
+.sizing-li{
+  text-decoration: none;
+  list-style-type: none;
+}
+.checkbox1 {
+  display: block;
+  position:sticky;
+  height: 50px;
+  width: 130px;
+  opacity: 0;
+  cursor: pointer;
+  background-color: #ce6ee9;
+}
+.sizing-dropdownmenu p:hover {
+  background-color: #f0f0f0;
+}
 .colorOptions {
   margin-top: 10px;
   margin-bottom: 10px;
