--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@ body{
     margin: auto;
 }
 .logoHolder{
+  display: block;
     text-align: center; 
     align-items: center;
 }
@@ -415,6 +416,27 @@ h1{
   cursor: pointer;
 }
 
+.cart{
+  width: 30px;
+  filter: invert(1);
+ 
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 5px;
+  
+}
+
+.videoContainer{
+  text-align: center; align-items: center; justify-content: center; display: block;
+}
+.cartTotal{
+  justify-content: center;margin: auto; margin-right: 50px;
+  font-family: Kl9yFont;
+  color: white;
+}
+.cartContainer{
+  display: flex; flex-direction: row; float: right; text-align: center; justify-content: center;
+}
 
 
 
@@ -488,4 +510,5 @@ h1{
         width:48%;
         margin-bottom: 10%;
       }
+      
 }
