--- a/styles.css
+++ b/styles.css
@@ -447,8 +447,27 @@ h1{
   margin-left: 60%;
 }
 
-
-
+.cartOutsideContainer{
+  text-align: center; align-items: center; align-content: center; justify-content: center; display:block; margin-top: 20px; width: 100%;
+}
+.cartRow{
+  display: flex; flex-direction: row; justify-content: center; align-items: center; text-align: center; border-width: 1px; border-color: black; border-style: solid;
+}
+.cartImg{
+  width: 10%; margin-top: 20px; margin-bottom: 20px; margin-left: 5%;
+}
+.cartItemName{
+  padding-left: 10%; padding-right: 10%; color: #ce6ee9; font-family: Kl9yFont; width: 30%;
+}
+.cartPrice{
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: large;
+  color: white; width: 10%;
+}
+.cartRemoveBtn{
+  all: unset; text-decoration: none; background: rgb(44, 44, 44); font-family: Kl9yFont; margin-left: 10px; cursor: pointer; font-size: small; color: white; margin-right: 5%;
+}
 
 
 @media (max-width: 500px){
