--- a/styles.css
+++ b/styles.css
@@ -442,22 +442,52 @@ h1{
   flex-direction: row; 
   text-align: center; 
   justify-content: center; 
-  margin-left: auto;
   align-items: center;
+
+  margin-left: auto;
   margin-left: 60%;
 }
 
 .cartOutsideContainer{
-  text-align: center; align-items: center; align-content: center; justify-content: center; display:block; margin-top: 20px; width: 100%;
+  text-align: center; 
+  align-items: center; 
+  align-content: center; 
+  justify-content: center; 
+  display:block; 
+  
+  margin-top: 20px; 
+
+  width: 100%;
 }
 .cartRow{
-  display: flex; flex-direction: row; justify-content: center; align-items: center; text-align: center; border-width: 1px; border-color: black; border-style: solid;
+  display: flex; 
+  flex-direction: row; 
+  justify-content: center; 
+  align-items: center; 
+  text-align: center; 
+
+  width: 100%;
+  border-width: 1px; 
+  border-color: black; 
+  border-style: solid;
+  -moz-box-shadow: 0px 0px 3px rgba(0,0,0,.5);
+  -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,.5);
+  box-shadow: 0px 0px 6px rgba(0,0,0,.5);
+
+  margin-bottom: 10px;
 }
 .cartImg{
-  width: 10%; margin-top: 20px; margin-bottom: 20px; margin-left: 5%;
+  width: 10%; 
+  margin-top: 20px; 
+  margin-bottom: 20px; 
+  margin-left: 5%;
 }
 .cartItemName{
-  padding-left: 10%; padding-right: 10%; color: #ce6ee9; font-family: Kl9yFont; width: 30%;
+  padding-left: 10%; 
+  padding-right: 10%; 
+  color: white; 
+  font-family: Kl9yFont; 
+  width: 30%;
 }
 .cartPrice{
   font-family: Arial, Helvetica, sans-serif;
@@ -466,7 +496,27 @@ h1{
   color: white; width: 10%;
 }
 .cartRemoveBtn{
-  all: unset; text-decoration: none; background: rgb(44, 44, 44); font-family: Kl9yFont; margin-left: 10px; cursor: pointer; font-size: small; color: white; margin-right: 5%;
+  all: unset; 
+  text-decoration: none;
+  background: rgb(44, 44, 44); 
+  font-family: Kl9yFont; 
+  margin-left: 10px; 
+  cursor: pointer; 
+  font-size: small; 
+  color: #ce6ee9; 
+  margin-right: 5%;
+}
+
+.checkoutBtn{
+  font-family: Kl9yFont;
+  color: white;
+  font-size: small;
+  width: 10rem;
+  margin-left: 40%;
+  background-color:#ce6ee9;
+  height: 3rem;
+  margin-bottom: 5%;
+  cursor: pointer;
 }
 
 
@@ -537,6 +587,25 @@ h1{
       .imgA{
         width:48%;
         margin-bottom: 10%;
+      }
+      .cartImg{
+        width: 20%; 
+        margin-top: 20px; 
+        margin-bottom: 20px; 
+        margin-left: 2%;
+      }
+      .cartItemName{
+        padding-left: 5%; 
+        padding-right: 5%; 
+        color: #ce6ee9; 
+        font-family: Kl9yFont; 
+        width: 30%;
+      }
+      .cartRemoveBtn{
+        margin-right: 2%;
+      }
+      .cartItemName{
+        font-size: small;
       }
       
 }
