--- a/styles.css
+++ b/styles.css
@@ -539,6 +539,50 @@ h1{
  
 }
 
+
+.dropdownSize {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: #fff;
+  color: #000;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.dropdownSize-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 80px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdownSize-content a {
+  color: #000;
+  padding: 10px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdownSize-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdownSize:hover .dropdownSize-content {
+  display: block;
+}
+
+.dropdownSize:hover .dropbtn {
+  background-color: #f1f1f1;
+}
+
 /* Add animation */
 @keyframes spin {
   0% { transform: rotate(0deg); }
