--- a/styles.css
+++ b/styles.css
@@ -543,25 +543,33 @@ h1{
 .dropdownSize {
   position: relative;
   display: inline-block;
+  margin-bottom: 5%;
+  width: 80%;
+  
 }
 
 .dropbtn {
-  background-color: #fff;
+  background-color: white;
   color: #000;
-  padding: 10px;
+  
   font-size: 16px;
   border: none;
   cursor: pointer;
-  border-radius: 4px;
+ 
+  width: 100%;
+  font-family: Kl9yFont;
+  height: 3rem;
 }
 
 .dropdownSize-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: white;
+  width: 100%;
   min-width: 80px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  
 }
 
 .dropdownSize-content a {
@@ -569,6 +577,7 @@ h1{
   padding: 10px;
   text-decoration: none;
   display: block;
+  font-family: Kl9yFont;
 }
 
 .dropdownSize-content a:hover {
@@ -599,6 +608,10 @@ h1{
   border-top-color: #ce6ee9;
   border-radius: 50%;
   animation: spin 1s linear infinite;
+}
+
+.dev{
+  display: none;
 }
 
 
@@ -689,5 +702,9 @@ h1{
       .cartItemName{
         font-size: small;
       }
+      .dropdownSize{
+        width: 90%;
+      }
+      
       
 }
