--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ body{
 }
 .kl9yLogo{
     width: 5%;
-    margin-top: 5%;
+    margin-top: 2%;
 }
 .navElem{
     color:#ce6ee9; 
@@ -170,8 +170,23 @@ h1{
     font-weight: bold;
     font-size: large;
     color: white;
+    text-align: left;
     margin-right: 20%;
     margin-left: 20%;
+}
+.contactText{
+  font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: large;
+    color: white;
+    margin-right: 20%;
+    margin-left: 20%;
+}
+.emailsHeader{
+  max-width: 100%;
+  width: 100%;
+  text-align: center;
+  
 }
 .buyNowBtn{
     font-family: Kl9yFont;
@@ -623,7 +638,7 @@ h1{
     }
     .kl9yLogo{
         width: 20%;
-        margin-top: 5%;
+        margin-top: 2%;
     }
     .discDiv{
         width: 80%; 
