--- a/styles.css
+++ b/styles.css
@@ -649,6 +649,10 @@ h1{
         width: 20%;
         margin-top: 2%;
     }
+    .kl9yLogo2{
+      width: 30%;
+      margin-top: 2%;
+  }
     .discDiv{
         width: 80%; 
         text-align: center; 
